# cygit2

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
src/cygit2/: __init__.py  _commit.pxd  _commit.pyx  _index.pxd  _index.pyx  _oid.pxd  _oid.pyx  _reference.pxd  _reference.pyx  _repository.pxd  _repository.pyx  _signature.pxd  _signature.pyx  _tree.pxd  _tree.pyx  errors.py  libgit2.pxd
tests/: conftest.py
