[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "ninja",
    "cython>=3.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "cygit2"
version = "0.1.0"
description = "High-performance Cython bindings for libgit2"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Cython",
    "Topic :: Software Development :: Version Control :: Git",
]
keywords = ["git", "libgit2", "cython", "vcs"]
dependencies = [
    "typing-extensions>=4.0.0",
]
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
pythonpath = ["src"]

[tool.rye]
dev-dependencies = [
    "pytest>=8.3.4",
]
